--- a/lendsqr/src/components/reuseableFields/styles.scss
+++ b/lendsqr/src/components/reuseableFields/styles.scss
@@ -1,10 +1,10 @@
 $faint-blue: #545F7D;
 $light-green: #39CDCC;
-
+$blue: #213F7D;
 .input-wrapper{
     width: 100%;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    // margin-top: 30px;
+    // margin-bottom: 30px;
     position: relative;
     input{
         outline: none;
@@ -37,3 +37,54 @@ $light-green: #39CDCC;
         cursor: pointer;
     }
 }
+.nav-wrapper{
+    position: fixed;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    color: $blue;
+    justify-content: space-between;
+    gap: 20px;
+    box-shadow: 0px 10px 10px -5px rgba($faint-blue, 0.15);
+    padding: 30px 10px;
+    .search-div{
+        position: relative;
+        height: max-content;
+        width: 40%;
+        min-width: 250px;
+        .input-wrapper{
+            width: 100%;
+        }
+        .search-button{
+            background-color: $light-green;
+            padding: 10px 20px;
+            width: 70px;
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            height: 100%;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+            svg{
+                color: white;
+                font-size: 1.3rem;
+            }
+        }
+    } 
+    .profile{
+        display: flex;
+        align-items: center;
+        width: 30%;
+        max-width: 300px;
+        justify-content: space-between;
+        .docs{
+            text-decoration: underline;
+        }
+        div{
+            display: flex;
+            align-items: center;
+            // width: 30%;
+            // justify-content: space-between;  
+        }
+    }
+} 
