Updated the font-family, added react-table and commenced work on the dashboard user page

--- a/lendsqr/src/components/layout/styles.scss
+++ b/lendsqr/src/components/layout/styles.scss
@@ -1,7 +1,7 @@
-.dashboard-wrapper{
+.layout-wrapper{
     position: relative;
     .body{
         padding-left: 300px;
-        padding-top: 100px;
+        padding-top: 120px;
     }
 }
