--- a/lendsqr/src/index.css
+++ b/lendsqr/src/index.css
@@ -1,13 +1,18 @@
 *{
   box-sizing: border-box;
-  font-family: 'AvenirNext';
+  font-family: 'AvenirNext', 'AvenirNextBold';
 }
 @font-face {
   font-family: 'AvenirNext';
-  src: url('./fonts/AvenirNextLTPro-Regular.otf') format('opentype'),
-       url('./fonts/AvenirNextLTPro-Bold.otf') format('opentype');
-  font-weight: bold;
+  src: url('./fonts/AvenirNextLTPro-Regular.otf') format('opentype');
+  font-weight: normal;
   font-style: normal;
 
 }
 
+@font-face {
+  font-family: 'AvenirNextBold'; /* Use a different font-family name for the bold font */
+  src: url('./fonts/AvenirNextLTPro-Bold.otf') format('opentype');
+  font-weight: bold; /* Set font-weight to 'bold' */
+  font-style: normal;
+}
