Update on the mobile responsiveness

--- a/lendsqr/src/components/layout/styles.scss
+++ b/lendsqr/src/components/layout/styles.scss
@@ -14,11 +14,16 @@ $blue: #213F7D;
     }
 }
 
-.active{
+.switched{
     display: block;
 }
-.inactive{
+.notswitched{
     display: none;
+}
+.active{
+    background-color: rgba($light-green, 0.15);
+    border-left: 4px solid $light-green;
+    color: $blue;
 }
 .nav-wrapper{
     position: fixed;
