--- a/lendsqr/src/components/reuseableFields/styles.scss
+++ b/lendsqr/src/components/reuseableFields/styles.scss
@@ -44,6 +44,7 @@ $blue: #213F7D;
     max-width: 220px;
     min-width: 120px;
     background-color: #fff;
+    cursor: pointer;
     &:hover{
         box-shadow: 0px 2px 4px rgba(black, 0.25);
         transition: all 0.3s ease-in;
