--- a/lendsqr/src/components/dashboard/users/styles.scss
+++ b/lendsqr/src/components/dashboard/users/styles.scss
@@ -16,6 +16,7 @@ $faint-blue: #545F7D;
     }
     .table-wrapper{
         margin: 40px 0px;
+        position: relative;
         .popup-action{
             position: relative;
             cursor: pointer;
@@ -37,6 +38,29 @@ $faint-blue: #545F7D;
                     svg{
                         margin-right: 20px;
                     }
+                }
+            }
+        }
+        .filter-wrapper{
+            background-color: white;
+            position: absolute;
+            top: 60px;
+            left: 20px;
+            box-shadow: 0px 2px 20px rgba(black, 0.05);
+            text-align: left;
+            width: 300px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: 1px solid rgba($color: $faint-blue, $alpha: 0.14);
+            color: $faint-blue;
+            .filter-div{
+                p{
+                    font-weight: 500;
+                }
+                .buttons{
+                    display: flex;
+                    gap: 20px;
+                    margin: 20px 0px;
                 }
             }
         }
