Added the testing library test to the codebase

--- a/lendsqr/src/components/reuseableFields/table/styles.scss
+++ b/lendsqr/src/components/reuseableFields/table/styles.scss
@@ -85,6 +85,7 @@ $danger-red: #E4033B;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        color: $faint-blue;
         .select-wrapper{
             display: flex;
             align-items: center;
