--- a/lendsqr/src/components/dashboard/users/styles.scss
+++ b/lendsqr/src/components/dashboard/users/styles.scss
@@ -101,7 +101,7 @@ $light-green: #39CDCC;
         .buttons{
             display: flex;
             justify-content: end;
-            width: 60%;
+            width: fit-content;
             gap: 20px;
             .button-wrapper{
                 width: inherit;
@@ -141,8 +141,7 @@ $light-green: #39CDCC;
                 gap: 20px;
                 .user-icon{
                     background-color: rgba($blue,0.2);
-                    width: 100px;
-                    height: 100px;
+                    padding: 20px;
                     border-radius: 50%;
                     display: flex;
                     align-items: center;
@@ -196,8 +195,10 @@ $light-green: #39CDCC;
                 justify-content: space-between;
                 margin-top: 20px;
                 cursor: pointer;
+                gap: 20px;
+                align-items: end;
                 .activeTab{
-                    width: 150px;
+                    width: 130px;
                     color: $light-green;
                     border-bottom: 3px solid $light-green;
                 }
@@ -227,6 +228,20 @@ $light-green: #39CDCC;
             // justify-items: center;
         }
     }
+    .tab-wrapper{
+        overflow: hidden;
+        .tab-header{
+            overflow: scroll;
+        }
+    }
+}
+@media screen and (max-width: 550px) {
+    .single-user-div{
+        .header{
+            flex-direction: column;
+            align-items: flex-start;
+        }
+    }
 }
 
 @media screen and (max-width: 500px) {
@@ -234,6 +249,16 @@ $light-green: #39CDCC;
         .analytics-wrapper{
             grid-template-columns: 1fr;
             // justify-items: center;
+        }
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .single-user-div{
+        .header{
+            .buttons{
+                flex-direction: column;
+            }
         }
     }
 }
