Added the testing component for the user dashboard

--- a/lendsqr/src/components/dashboard/users/styles.scss
+++ b/lendsqr/src/components/dashboard/users/styles.scss
@@ -78,6 +78,10 @@ $light-green: #39CDCC;
             }
         }
     }
+    .empty{
+        margin-top: 30px;
+        color: $light-green;
+    }
 }
 
 .single-user-div{
