--- a/lendsqr/src/components/dashboard/users/styles.scss
+++ b/lendsqr/src/components/dashboard/users/styles.scss
@@ -9,6 +9,10 @@ $light-green: #39CDCC;
     .header{
         color: $blue;
         text-align: left;
+        font-family: 'AvenirNextBold';
+    }
+    .page-header{
+        font-size: 20px;
     }
     .analytics-wrapper{
         display: grid;
@@ -38,20 +42,14 @@ $light-green: #39CDCC;
                 p{
                     display: flex;
                     align-items: center;
-                    justify-content: center;
+                    // justify-content: center;
                     &:hover{
                         color: $blue;
                         font-family: 'AvenirNextBold';
                         transition: all .2s ease-in;
                     }
-                    // &:hover{
-                    //     font-family: 'AvenirNextBold';
-                    // }
                     svg{
                         margin-right: 20px;
-                    }
-                    svg.eye{
-                        margin-right: 30px;
                     }
                 }
             }
@@ -139,6 +137,7 @@ $light-green: #39CDCC;
                 align-items: center;
                 text-align: left;
                 gap: 20px;
+                padding: 10px 0px;
                 .user-icon{
                     background-color: rgba($blue,0.2);
                     padding: 20px;
