--- a/lendsqr/src/components/reuseableFields/styles.scss
+++ b/lendsqr/src/components/reuseableFields/styles.scss
@@ -55,11 +55,18 @@ $blue: #213F7D;
 
 .card-wrapper{
     border: 2px solid rgba($blue, 0.06);
-    padding: 10px 20px;
+    padding: 20px;
     max-width: 220px;
     min-width: 120px;
     background-color: #fff;
     cursor: pointer;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    img{
+        width: fit-content;
+    }
     &:hover{
         box-shadow: 0px 2px 4px rgba(black, 0.25);
         transition: all 0.3s ease-in;
@@ -70,6 +77,7 @@ $blue: #213F7D;
         font-family: 'AvenirNextBold';
         font-weight: bold;
         font-size: 18px;
+        margin: 0px;
     }
     .title{
         color: $faint-blue;
