--- a/lendsqr/src/components/login/styles.scss
+++ b/lendsqr/src/components/login/styles.scss
@@ -37,7 +37,7 @@ $faint-blue: #545F7D;
                 .header{
                     color: $dark-blue;
                     font-size: 30px;
-                    font-family: 'AvenirNextBold';
+                    font-weight: 500;
                 }
                 span{
                     color: $faint-blue;
