--- a/lendsqr/src/components/reuseableFields/table/styles.scss
+++ b/lendsqr/src/components/reuseableFields/table/styles.scss
@@ -41,7 +41,7 @@ $danger-red: #E4033B;
                         }
                     }
                     div{
-                        font-family: 'AvenirNextBold';
+                        font-weight: 500;
                     }
                 }
             }
